basic-docker-secrets-no-swarm/src/main/java/example/errors/InvalidRequestException.java
package example.errors;

class InvalidRequestException extends ApplicationException {

    public InvalidRequestException(int code, String message) {
        super(code, message);
    }
}
